# pathmarcher

./: .gitignore  CMakeLists.txt  Dockerfile
src/code/: main.cpp  pipeline.cpp  pixel.cpp  progressbar.cpp  renderer.cpp
src/headers/: main.hpp  pipeline.hpp  pixel.hpp  progressbar.hpp  renderer.hpp
src/kernels/: image.cl  kali.cl  maze.cl  scene.cl
src/kernels/examples/: cuphead.cl  kali.cl  mandelbox.cl  maze.cl
src/shaders/: frag.glsl  vert.glsl
